test_regress/t/t_class2.out
%Error: t/t_class2.v:35:14: Unsupported: Hierarchical class references
   35 |       if (Cls::ENUM_VAL != 22) $stop;
      |              ^~
%Error: t/t_class2.v:35:16: Unsupported: scoped class reference
   35 |       if (Cls::ENUM_VAL != 22) $stop;
      |                ^~~~~~~~
%Error: t/t_class2.v:34:11: Unsupported: scoped class reference
   34 |       if (Pkg::ENUMP_VAL != 33) $stop;
      |           ^~~
%Error: Exiting due to
